# Cerebra

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py
app/components/: bm25_retriever.py  chunker.py  document_loader.py  embeddings.py  hybrid_retriever.py  vector_store.py
app/data/raw/: sample_doc.txt
app/memory/: __init__.py  context_assembler.py  conversation_memory.py  conversation_store.py  query_rewriter.py  semantic_cache.py
app/orchestration/: simple_workflow.py
app/services/: ingestion_service.py  query_rewriter.py  semantic_cache.py
rag_chat_application.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: healthcheck.py
tests/: test_config.py  test_health.py  test_models.py  test_phase3_memory.py  test_phase3_orchestration.py  test_retrieval.py
